Navbar on mobile fixed

--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -13,6 +13,15 @@
     color: $neutrals_black;
     position: relative;
 
+    @media screen and (max-width: 1024px){
+      padding: 12px 24px;
+    }
+
+    @media screen and (max-width: 600px){
+      position: fixed;
+      z-index: 999;
+    }
+
     .burger{
       display: none;
 
@@ -21,9 +30,6 @@
       }
     } 
 
-    @media screen and (max-width: 1024px){
-      padding: 12px 24px;
-    }
   
     .header-navbar-logo {
       width: 164px;
